--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,16 @@
+.App-header{
+    margin: 30px 0;
+}
 
+.App-logo{
+    max-width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+h1{
+    font-size: 40px;
+    text-align: center;
+    color: tomato;
+    
+}
