--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,25 @@
+
+.App{
+    background-repeat: no-repeat;
+    background-image: url(./aruna.jpg);
+    background-size: cover;
+    height: 500px;
+    opacity: 0.7;
+    margin: 40px;
+    border-radius: 30px;
+    color: darksalmon;
+}
+
 .App-header{
-    margin: 30px 0;
+    padding-top: 20px;
+    margin: 30px auto;
+    
 }
 
 .App-logo{
     max-width: 100px;
     display: block;
-    margin: 0 auto;
+    margin: 0px auto;
 }
 
 h1{
