--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,49 @@
-
-.App{
-    background-repeat: no-repeat;
+body{
     background-image: url(./aruna.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     height: 500px;
-    opacity: 0.7;
-    margin: 40px;
+    opacity: 0.8;
+
+}
+.App{
+    margin: 60px;
+    padding: 30px auto;
     border-radius: 30px;
-    color: darksalmon;
+    background-color:  rgb(245, 205, 191);
+    height: 400px;
+    
+}
+.search{
+    background-image: url(./aruna.jpg);
+    background-repeat: no-repeat;
+    border-radius: 30px;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 400px;
+
 }
 
 .App-header{
     padding-top: 20px;
     margin: 30px auto;
-    
 }
 
 .App-logo{
-    max-width: 100px;
+    max-width: 150px;
     display: block;
     margin: 0px auto;
 }
 
 h1{
-    font-size: 40px;
+    font-size: 60px;
     text-align: center;
-    color: tomato;
-    
+    color: rgb(233, 89, 5);
+    font-weight: 50px; 
+}
+p{
+    text-align: center;
+    color: rgb(233, 89, 5);
+    font-size: 30px;
 }
